--- a/examples/simple/test.yml
+++ b/examples/simple/test.yml
@@ -1,12 +1,12 @@
 # setup environment - build and start docker containers
 - hosts: localhost
+  vars:
+    ansible_testing_hosts:
+      - name: foo
+        image: docker.io/centos:8
+        command: sleep inf
   roles:
-    - role: ansible-testing/setup
-      vars:
-        ansible_testing_hosts:
-          - name: foo
-            image: docker.io/centos:8
-            command: sleep inf
+    - ansible-testing/setup
 
 
 # launch playbook
@@ -30,4 +30,4 @@
 # terdown - stop and remove docker containers
 - hosts: localhost
   roles:
-    - role: ansible-testing/teardown
+    - ansible-testing/teardown
