--- a/examples/simple/test.yml
+++ b/examples/simple/test.yml
@@ -2,7 +2,7 @@
 - hosts: localhost
   vars:
     ansible_testing_hosts:
-      - name: foo
+      - name: foo.example.com
         image: docker.io/centos:8
         command: sleep inf
   roles:
