--- a/ansible-testing/setup/tasks/main.yml
+++ b/ansible-testing/setup/tasks/main.yml
@@ -28,6 +28,7 @@
 - name: Start testing containers
   docker_container:
     name: '{{ item.name }}'
+    hostname: '{{ item.name }}'
     image: '{{ item.image }}'
     working_dir: '{{ item.workdir | default(omit) }}'
     entrypoint: '{{ item.entrypoint | default(omit) }}'
