--- a/ansible-testing/setup/tasks/main.yml
+++ b/ansible-testing/setup/tasks/main.yml
@@ -7,7 +7,8 @@
     _container_hosts: '{{ ansible_testing_hosts | map(attribute="name") | list }}'
     _undefined_hosts: '{{ _inventory_hosts | difference(_container_hosts) }}'
 
-# Need them in all plays that are executed on host
+# Need them in all plays that are executed on host. Teardown sub-role then can
+# be executed without duplicating vars to another play.
 - name: Add role params to facts
   set_fact:
     '{{ item }}': '{{ lookup("vars", item) }}'
