--- a/examples/simple/test.yml
+++ b/examples/simple/test.yml
@@ -6,7 +6,7 @@
         image: docker.io/centos:8
         command: sleep inf
   roles:
-    - ansible-testing/setup
+    - setup
 
 
 # launch playbook
@@ -30,4 +30,4 @@
 # terdown - stop and remove docker containers
 - hosts: localhost
   roles:
-    - ansible-testing/teardown
+    - teardown
