Rename role, add metadata file and add license

--- a/examples/network/test.yml
+++ b/examples/network/test.yml
@@ -1,6 +1,6 @@
 - hosts: localhost
   vars:
-    ansible_testing_hosts:
+    docker_testenv_hosts:
       - name: foo.example.com
         image: docker.io/centos:8
         command: sleep inf
