--- a/teardown/tasks/main.yml
+++ b/teardown/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Destroy network
   docker_network:
-    name: '{{ ansible_testing_network_name }}'
+    name: '{{ docker_testenv_network_name }}'
     state: absent
     force: true
 
@@ -8,4 +8,4 @@
   docker_container:
     name: '{{ item.name }}'
     state: absent
-  loop: '{{ ansible_testing_hosts }}'
+  loop: '{{ docker_testenv_hosts }}'
